--- a/01-webpack/package.json
+++ b/01-webpack/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^5.2.4",
     "eslint": "^7.26.0",
     "eslint-loader": "^4.0.2",
+    "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
     "style-loader": "^2.0.0",
